--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "files": [
     "build"
   ],
-  "homepage": "https://julianlionti.github.io/commonui-formu/",
+  "homepage": "https://julianlionti.github.io/commonui-formu",
   "types": "build/index.d.ts",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "npx eslint .",
     "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "predeploy": "cd example && npm run build",
+    "deploy": "gh-pages -d example/build"
   },
   "keywords": [],
   "author": "Julian Lionti",
@@ -33,6 +35,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.1.0",
     "jest": "^26.6.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
